# AmesCAP

./: .flake8  .gitignore  .readthedocs.yaml  CAP_Exercises.md  CAP_lecture.md  CONTRIBUTING.rst  INSTRUCTIONS.txt  LICENSE  MANIFEST.in  MANIFSET.in  MarsVars.py  README.md  README.rst  __init__.py  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: marscalendar_test.yml  marsfiles_test.yml  marsformat_test.yml  marsinterp_test.yml  marsplot_test.yml  marspull_test.yml  marsvars_test.yml  test-marspull.yml
amescap/: .FV3_utils.py.swp  FV3_utils.py  Ncdf_wrapper.py  Script_utils.py  Spectral_utils.py  __init__.py  cli.py  pdf2image.py
amescap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
amescap/amesgcm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
amesgcm/: FV3_utils.py  Ncdf_wrapper.py  Script_utils.py  Spectral_utils.py  __init__.py  pdf2image.py
amesgcm/lib/: FV3_utils.py
docs/: CAP_Documentation.md  INSTRUCTIONS.txt  INSTRUCTIONS_PFE.txt  NAS_INSTRUCTIONS.txt  NAS_INSTRUCTIONS_with_BASEMAP.txt  NAS_Installation.txt  paper.bib  paper.md  requirements.txt
docs/source/: cli.rst  conf.py  description.rst  examples.rst  index.rst  installation.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/MarsCalendar/: index.rst
docs/source/autoapi/MarsFiles/: index.rst
docs/source/autoapi/MarsFormat/: index.rst
docs/source/autoapi/MarsInterp/: index.rst
docs/source/autoapi/MarsPlot/: index.rst
docs/source/autoapi/MarsPull/: index.rst
docs/source/autoapi/MarsVars/: index.rst
docs/source/autoapi/MarsViewer/: index.rst
docs/source/autoapi/amescap/: index.rst
docs/source/autoapi/amescap/FV3_utils/: index.rst
docs/source/autoapi/amescap/Ncdf_wrapper/: index.rst
docs/source/autoapi/amescap/Script_utils/: index.rst
docs/source/autoapi/amescap/Spectral_utils/: index.rst
docs/source/autoapi/amescap/cli/: index.rst
docs/source/autoapi/amescap/pdf2image/: index.rst
lib/: Script_utils.py
mars_data/: Legacy.fixed.nc
mars_templates/: CAP_unit_tests.sh  amescap_profile  amesgcm_profile  legacy.in  openMars2FV3.py
requirements/: dev.txt
tests/: base_test.py  create_ames_gcm_files.py  create_gcm_files.py  test_marscalendar.py  test_marsfiles.py  test_marsformat.py  test_marsinterp.py  test_marsplot.py  test_marspull.py  test_marsvars.py
tutorial/: CAP_Exercises.md  CAP_Exercises_2021.md  CAP_Install.md  CAP_Install_cb.md  CAP_exercise.ipynb  CAP_install.md  CAP_lecture.md  CAP_lecture_cb.md  README.md
tutorial/tutorial_files/: CAP_Exercises.md
