[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amescap"
version = "0.3"
description = "Analysis pipeline for the NASA Ames MGCM"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Mars Climate Modeling Center", email = "richard.a.urata@nasa.gov"}
]
urls = {Homepage = "https://github.com/NASA-Planetary-Science/AmesCAP"}
dependencies = [
    "requests>=2.31.0",
    "netCDF4>=1.6.5",
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "scipy>=1.11.4",
    "xarray>=2024.1.0",
    "pandas>=2.0.3",
    "pyodbc>=4.0.39",
    "pypdf==6.6.0",
]

[project.optional-dependencies]
spectral = ["pyshtools>=4.10.0"]
dev = [
  "sphinx>=7.2.6",
  "sphinx-rtd-theme>=1.3.0rc1",
  "sphinx-autoapi>=3.0.0",
]

[project.scripts]
cap = "amescap.cli:main"
MarsPull = "bin.MarsPull:main"
MarsInterp = "bin.MarsInterp:main"
MarsPlot = "bin.MarsPlot:main"
MarsVars = "bin.MarsVars:main"
MarsFiles = "bin.MarsFiles:main"
MarsFormat = "bin.MarsFormat:main"
MarsCalendar = "bin.MarsCalendar:main"
MarsNest = "bin.MarsNest:main"

[tool.setuptools]
packages = ["amescap", "bin"]

[tool.setuptools.data-files]
"mars_data" = ["mars_data/Legacy.fixed.nc"]
"mars_templates" = [
    "mars_templates/legacy.in",
    "mars_templates/amescap_profile"
]